compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__records__record_spread3.snap
---
source: compiler-core/src/erlang/tests/records.rs
assertion_line: 213
expression: "\nrecord Triple {\n  Triple(a: Int, b: Int, c: Int)\n}\n\nfn main() {\n  let triple = Triple(1,2,3)\n  case triple {\n    Triple(b: the_b, ..) -> the_b\n  }\n}\n"
---
----- SOURCE CODE

record Triple {
  Triple(a: Int, b: Int, c: Int)
}

fn main() {
  let triple = Triple(1,2,3)
  case triple {
    Triple(b: the_b, ..) -> the_b
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([triple/0]).

-type triple() :: {triple, integer(), integer(), integer()}.

-file("/root/project/test/my/mod.rakun", 6).
-spec main() -> integer().
main() ->
    Triple = {triple, 1, 2, 3},
    case Triple of
        {triple, _, The_b, _} ->
            The_b
    end.
