compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__records__record_updates1.snap
---
source: compiler-core/src/erlang/tests/records.rs
assertion_line: 247
expression: "\npub record Person { Person(name: String, age: Int) }\n\nfn main() {\n    let p = Person(\"Quinn\", 27)\n    let new_p = Person(..p, age: p.age + 1)\n    new_p\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([person/0]).

-type person() :: {person, binary(), integer()}.

-file("/root/project/test/my/mod.rakun", 4).
-spec main() -> person().
main() ->
    P = {person, <<"Quinn"/utf8>>, 27},
    New_p = erlang:setelement(3, P, erlang:element(3, P) + 1),
    New_p.
