compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__records__record_updates4.snap
---
source: compiler-core/src/erlang/tests/records.rs
expression: "\npub record Car { Car(make: String, model: String, driver: Person) }\npub record Person { Person(name: String, age: Int) }\n\nfn main() {\n    let car = Car(make: \"Amphicar\", model: \"Model 770\", driver: Person(name: \"John Doe\", age: 27))\n    let new_p = Person(..car.driver, age: 28)\n    new_p\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([car/0, person/0]).

-type car() :: {car, binary(), binary(), person()}.

-type person() :: {person, binary(), integer()}.

-file("/root/project/test/my/mod.rakun", 5).
-spec main() -> person().
main() ->
    Car = {car,
        <<"Amphicar"/utf8>>,
        <<"Model 770"/utf8>>,
        {person, <<"John Doe"/utf8>>, 27}},
    New_p = erlang:setelement(3, erlang:element(4, Car), 28),
    New_p.
