compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__records__reserve_words.snap
---
source: compiler-core/src/erlang/tests/records.rs
assertion_line: 19
expression: "record_definition(\"div\",\n&[(\"receive\", type_::int()), (\"catch\", type_::tuple(vec![])),\n(\"unreserved\", type_::tuple(vec![]))])"
---
-record('div', {'receive' :: integer(), 'catch' :: {}, unreserved :: {}}).
